# veadotube-twitch-bridge

./: .gitignore  README.md  pyproject.toml
example/: config.toml
veado_twitch_bridge/: __main__.py  config.py  veadotube.py
veado_twitch_bridge/twitch/: event_listener.py  twitch.py
veado_twitch_bridge/veadotube/: connection.py
veadotube_twitch_bridge/: config.py
veadotube_twitch_bridge/veadotube/: connection.py  message_utils.py
