[tool.poetry]
name = "veado-twitch-bridge"
version = "0.1.0"
description = ""
authors = ["Carrie J V <carrie@carriejv.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
tomlkit = "^0.12.4"
twitchapi = "^4.2.0"
websockets = "^12.0"
platformdirs = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
